--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2021"
 [dependencies]
 serde_json = "1.0.108"
 serde = { version = "1.0.190", features = ["derive"] }
+serde_yaml = "0.9.27"
